; ModuleID = '/home/carl/AnghaBench/micropython/ports/esp8266/extr_machine_pin.c_mp_obj_get_pin_obj.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/esp8266/extr_machine_pin.c_mp_obj_get_pin_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pyb_pin_type = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"expecting a pin\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mp_obj_get_pin_obj(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @mp_obj_get_type(i32* %4)
  %6 = icmp ne i32* %5, @pyb_pin_type
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 @mp_raise_ValueError(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i32*, i32** %2, align 8
  store i32* %10, i32** %3, align 8
  %11 = load i32*, i32** %3, align 8
  ret i32* %11
}

declare dso_local i32* @mp_obj_get_type(i32*) #1

declare dso_local i32 @mp_raise_ValueError(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
